--- a/Ejercicios Marta trujillo/tablas/Ejercicio19.html
+++ b/Ejercicios Marta trujillo/tablas/Ejercicio19.html
@@ -108,7 +108,7 @@
 		<br>
 		<h4>Utilizando CELLPADDING</h4>
 
-		<table style="width:100%" cellpadding="20px">
+		<table style="width:100%" cellpadding="20">
 			<tbody>
 				<tr>
 					<td style="70%">distancia desde los bordes: 20px</td>
@@ -155,15 +155,15 @@
 		<h1>
 			8
 		</h1>
-		<table style="width:100%;border-spacing:20px;" cellpadding="20px">
+		<table style="width:100%;border-spacing:20px;">
 			<tbody>
 				<tr>
-					<td style="70%">Distancia entre los bordes:20px <br> Distancia desde los bordes al contenido: 20px</td>
-					<td style="30%">celda 2</td>
+					<td style="width:70%;padding:20px;">Distancia entre los bordes:20px <br> Distancia desde los bordes al contenido: 20px</td>
+					<td style="width:30%;padding:20px;">celda 2</td>
 				</tr>
 				<tr>
-					<td>celda 3</td>
-					<td>celda 4</td>
+					<td style="padding:20px;">celda 3</td>
+					<td style="padding:20px;">celda 4</td>
 				</tr>
 			</tbody>
 		</table>
@@ -201,15 +201,15 @@
 		<h1>
 			11
 		</h1>
-		<table style="width:100%;border-spacing:20px;background-color:grey" cellpadding="20px">
+		<table style="width:100%;border-spacing:20px;background-color:grey">
 			<tbody>
 				<tr>
-					<td style="70%;background-color:orange">Color del fondo: naranja <br> Distancia entre los bordes:20px <br> Distancia desde los bordes <br> al contenido: 20px</td>
-					<td style="30%">celda 2</td>
+					<td style="70%;background-color:orange;padding:20;">Color del fondo: naranja <br> Distancia entre los bordes:20px <br> Distancia desde los bordes <br> al contenido: 20px</td>
+					<td style="50%;padding:20;">celda 2</td>
 				</tr>
 				<tr>
-					<td style="background-color:orange">celda 3</td>
-					<td style="background-color:orange">celda 4</td>
+					<td style="background-color:orange;padding:20;">celda 3</td>
+					<td style="background-color:orange;padding:20;">celda 4</td>
 				</tr>
 			</body>
 		</table>
