--- a/Ejercicios Marta trujillo/tablas/Ejercicio20B.html
+++ b/Ejercicios Marta trujillo/tablas/Ejercicio20B.html
@@ -28,7 +28,7 @@
 		<br>
 		<br>
 		<br>
-		<table style="width:100%;">
+		<table style="width:100%; font-size:20px" align="center">
 			<tbody>
 				<tr>
 					<td>LUNES</td>
@@ -41,44 +41,44 @@
 				</tr>
 			</tbody>
 		</table>
-		<table style="width:100%; border-spacing:0px;height:300px" border="1">
-			<tbody  align="right" valign="bottom">
+		<table style="width:100%; border-spacing:0px; height:300px; font-size:30px" border="1">
+			<tbody align="right" valign="bottom">
 				<tr>
 					<td></td>
 					<td></td>
 					<td></td>
 					<td></td>
-					<td>1</td>
-					<td style="background-color:red ;color:white">2</td>
-					<td style="background-color:red ;color:white">3</td>				
+					<td><strong>1</strong></td>
+					<td style="background-color:red ;color:white"><strong>2</strong></td>
+					<td style="background-color:red ;color:white"><strong>3</strong></td>				
 
 				</tr>
 				<tr>
-					<td>4</td>
-					<td>5</td>
-					<td>6</td>
-					<td>7</td>
-					<td>8</td>
-					<td style="background-color:red ;color:white">9</td>
-					<td style="background-color:red ;color:white">10</td>				
+					<td><strong>4</strong></td>
+					<td><strong>5</strong></td>
+					<td><strong>6</strong></td>
+					<td><strong>7</strong></td>
+					<td><strong>8</strong></td>
+					<td style="background-color:red ;color:white"><strong>9</strong></td>
+					<td style="background-color:red ;color:white"><strong>10</strong></td>				
 
 				</tr>
 				<tr>
-					<td>11</td>
-					<td>12</td>
-					<td>13</td>
-					<td>14</td>
-					<td>15</td>
-					<td style="background-color:red ;color:white">16</td>
-					<td style="background-color:red ;color:white">17</td>				
+					<td><strong>11</strong></td>
+					<td><strong>12</strong></td>
+					<td><strong>13</strong></td>
+					<td><strong>14</strong></td>
+					<td><strong>15</strong></td>
+					<td style="background-color:red ;color:white"><strong>16</strong></td>
+					<td style="background-color:red ;color:white"><strong>17</strong></td>				
 
 				</tr>
 				<tr>
-					<td>18</td>
-					<td>19</td>
-					<td>20</td>
-					<td>21</td>
-					<td>22</td>
+					<td><strong>18</strong></td>
+					<td><strong>19</strong></td>
+					<td><strong>20</strong></td>
+					<td><strong>21</strong></td>
+					<td><strong>22</strong></td>
 					<td style="background-color:red ;color:white">23</td>
 					<td style="background-color:red ;color:white">24</td>				
 
@@ -89,8 +89,8 @@
 					<td>27</td>
 					<td>28</td>
 					<td>29</td>
-					<td style="background-color:red;color:white">30</td>
-					<td style="background-color:red ;color:white"></td>				
+					<td style="background-color:red;color:white"><strong>30</strong></td>
+					<td style="background-color:red ;color:white"><strong></strong></td>				
 
 				</tr>
 			</tbody>
