Correccion del ejercicio 20B

--- a/Ejercicios Marta trujillo/tablas/Ejercicio20B.html
+++ b/Ejercicios Marta trujillo/tablas/Ejercicio20B.html
@@ -84,11 +84,11 @@
 
 				</tr>
 				<tr>
-					<td>25</td>
-					<td>26</td>
-					<td>27</td>
-					<td>28</td>
-					<td>29</td>
+					<td><strong>25</strong></td>
+					<td><strong>26</strong></td>
+					<td><strong>27</strong></td>
+					<td><strong>28</strong></td>
+					<td><strong>29</strong></td>
 					<td style="background-color:red;color:white"><strong>30</strong></td>
 					<td style="background-color:red ;color:white"><strong></strong></td>				
 
